--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         .bat-signal {
             width: 100px;
             height: 100px;
-            background: url('smirkk.png') no-repeat center center;
+            background: url('r.png') no-repeat center center;
             background-size: contain;
             margin: 20px auto;
             animation: flicker 2s infinite alternate;
